Support Resources in runsettings
This adds resource support in the run settings for each run.
