# ci-gen/grpc/types/run_settings.pb.go
@@ -33,12 +33,13 @@ type RunSettings struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	Command  []string        `protobuf:"bytes,1,rep,name=command,proto3" json:"command,omitempty"`   // Command is the command in execv() form (array of strings)
-	Image    string          `protobuf:"bytes,2,opt,name=image,proto3" json:"image,omitempty"`       // Image is an arbitrary image name, the overlay runner needs docker registry format
-	Queue    string          `protobuf:"bytes,3,opt,name=queue,proto3" json:"queue,omitempty"`       // Queue is the name of the queue this run should be placed in.
-	Metadata *_struct.Struct `protobuf:"bytes,4,opt,name=metadata,proto3" json:"metadata,omitempty"` // Metadata is a free form grab-bag of properties for runners to use.
-	Name     string          `protobuf:"bytes,5,opt,name=name,proto3" json:"name,omitempty"`         // Name is the name of the run
-	Timeout  int64           `protobuf:"varint,6,opt,name=timeout,proto3" json:"timeout,omitempty"`  // Timeout is the timeout, in seconds, to wait before automatically canceling a run.
+	Command   []string        `protobuf:"bytes,1,rep,name=command,proto3" json:"command,omitempty"`     // Command is the command in execv() form (array of strings)
+	Image     string          `protobuf:"bytes,2,opt,name=image,proto3" json:"image,omitempty"`         // Image is an arbitrary image name, the overlay runner needs docker registry format
+	Queue     string          `protobuf:"bytes,3,opt,name=queue,proto3" json:"queue,omitempty"`         // Queue is the name of the queue this run should be placed in.
+	Metadata  *_struct.Struct `protobuf:"bytes,4,opt,name=metadata,proto3" json:"metadata,omitempty"`   // Metadata is a free form grab-bag of properties for runners to use.
+	Name      string          `protobuf:"bytes,5,opt,name=name,proto3" json:"name,omitempty"`           // Name is the name of the run
+	Timeout   int64           `protobuf:"varint,6,opt,name=timeout,proto3" json:"timeout,omitempty"`    // Timeout is the timeout, in seconds, to wait before automatically canceling a run.
+	Resources *Resources      `protobuf:"bytes,7,opt,name=resources,proto3" json:"resources,omitempty"` // Resource constraint values
 }
 
 func (x *RunSettings) Reset() {
@@ -115,6 +116,88 @@ func (x *RunSettings) GetTimeout() int64 {
 	return 0
 }
 
+func (x *RunSettings) GetResources() *Resources {
+	if x != nil {
+		return x.Resources
+	}
+	return nil
+}
+
+// Resources covers resource constraints that a runner might act on. It is
+// voluntary for a runner to take these values into consideration. It is also
+// up to the runner to interpret these values, and will differ between
+// different runners.
+type Resources struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Cpu    uint32 `protobuf:"varint,1,opt,name=cpu,proto3" json:"cpu,omitempty"`       // cpu utilization
+	Memory uint32 `protobuf:"varint,2,opt,name=memory,proto3" json:"memory,omitempty"` // memory available
+	Disk   uint32 `protobuf:"varint,3,opt,name=disk,proto3" json:"disk,omitempty"`     // disk available
+	Iops   uint32 `protobuf:"varint,4,opt,name=iops,proto3" json:"iops,omitempty"`     // iops available
+}
+
+func (x *Resources) Reset() {
+	*x = Resources{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_github_com_tinyci_ci_agents_ci_gen_grpc_types_run_settings_proto_msgTypes[1]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *Resources) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*Resources) ProtoMessage() {}
+
+func (x *Resources) ProtoReflect() protoreflect.Message {
+	mi := &file_github_com_tinyci_ci_agents_ci_gen_grpc_types_run_settings_proto_msgTypes[1]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use Resources.ProtoReflect.Descriptor instead.
+func (*Resources) Descriptor() ([]byte, []int) {
+	return file_github_com_tinyci_ci_agents_ci_gen_grpc_types_run_settings_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *Resources) GetCpu() uint32 {
+	if x != nil {
+		return x.Cpu
+	}
+	return 0
+}
+
+func (x *Resources) GetMemory() uint32 {
+	if x != nil {
+		return x.Memory
+	}
+	return 0
+}
+
+func (x *Resources) GetDisk() uint32 {
+	if x != nil {
+		return x.Disk
+	}
+	return 0
+}
+
+func (x *Resources) GetIops() uint32 {
+	if x != nil {
+		return x.Iops
+	}
+	return 0
+}
+
 var File_github_com_tinyci_ci_agents_ci_gen_grpc_types_run_settings_proto protoreflect.FileDescriptor
 
 var file_github_com_tinyci_ci_agents_ci_gen_grpc_types_run_settings_proto_rawDesc = []byte{
@@ -124,7 +207,7 @@ var file_github_com_tinyci_ci_agents_ci_gen_grpc_types_run_settings_proto_rawDes
 	0x72, 0x75, 0x6e, 0x5f, 0x73, 0x65, 0x74, 0x74, 0x69, 0x6e, 0x67, 0x73, 0x2e, 0x70, 0x72, 0x6f,
 	0x74, 0x6f, 0x12, 0x05, 0x74, 0x79, 0x70, 0x65, 0x73, 0x1a, 0x1c, 0x67, 0x6f, 0x6f, 0x67, 0x6c,
 	0x65, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2f, 0x73, 0x74, 0x72, 0x75, 0x63,
-	0x74, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0xb6, 0x01, 0x0a, 0x0b, 0x52, 0x75, 0x6e, 0x53,
+	0x74, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0xe6, 0x01, 0x0a, 0x0b, 0x52, 0x75, 0x6e, 0x53,
 	0x65, 0x74, 0x74, 0x69, 0x6e, 0x67, 0x73, 0x12, 0x18, 0x0a, 0x07, 0x63, 0x6f, 0x6d, 0x6d, 0x61,
 	0x6e, 0x64, 0x18, 0x01, 0x20, 0x03, 0x28, 0x09, 0x52, 0x07, 0x63, 0x6f, 0x6d, 0x6d, 0x61, 0x6e,
 	0x64, 0x12, 0x14, 0x0a, 0x05, 0x69, 0x6d, 0x61, 0x67, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09,
@@ -136,10 +219,19 @@ var file_github_com_tinyci_ci_agents_ci_gen_grpc_types_run_settings_proto_rawDes
 	0x74, 0x61, 0x12, 0x12, 0x0a, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x05, 0x20, 0x01, 0x28, 0x09,
 	0x52, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x12, 0x18, 0x0a, 0x07, 0x74, 0x69, 0x6d, 0x65, 0x6f, 0x75,
 	0x74, 0x18, 0x06, 0x20, 0x01, 0x28, 0x03, 0x52, 0x07, 0x74, 0x69, 0x6d, 0x65, 0x6f, 0x75, 0x74,
-	0x42, 0x2f, 0x5a, 0x2d, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x74,
-	0x69, 0x6e, 0x79, 0x63, 0x69, 0x2f, 0x63, 0x69, 0x2d, 0x61, 0x67, 0x65, 0x6e, 0x74, 0x73, 0x2f,
-	0x63, 0x69, 0x2d, 0x67, 0x65, 0x6e, 0x2f, 0x67, 0x72, 0x70, 0x63, 0x2f, 0x74, 0x79, 0x70, 0x65,
-	0x73, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x12, 0x2e, 0x0a, 0x09, 0x72, 0x65, 0x73, 0x6f, 0x75, 0x72, 0x63, 0x65, 0x73, 0x18, 0x07, 0x20,
+	0x01, 0x28, 0x0b, 0x32, 0x10, 0x2e, 0x74, 0x79, 0x70, 0x65, 0x73, 0x2e, 0x52, 0x65, 0x73, 0x6f,
+	0x75, 0x72, 0x63, 0x65, 0x73, 0x52, 0x09, 0x72, 0x65, 0x73, 0x6f, 0x75, 0x72, 0x63, 0x65, 0x73,
+	0x22, 0x5d, 0x0a, 0x09, 0x52, 0x65, 0x73, 0x6f, 0x75, 0x72, 0x63, 0x65, 0x73, 0x12, 0x10, 0x0a,
+	0x03, 0x63, 0x70, 0x75, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0d, 0x52, 0x03, 0x63, 0x70, 0x75, 0x12,
+	0x16, 0x0a, 0x06, 0x6d, 0x65, 0x6d, 0x6f, 0x72, 0x79, 0x18, 0x02, 0x20, 0x01, 0x28, 0x0d, 0x52,
+	0x06, 0x6d, 0x65, 0x6d, 0x6f, 0x72, 0x79, 0x12, 0x12, 0x0a, 0x04, 0x64, 0x69, 0x73, 0x6b, 0x18,
+	0x03, 0x20, 0x01, 0x28, 0x0d, 0x52, 0x04, 0x64, 0x69, 0x73, 0x6b, 0x12, 0x12, 0x0a, 0x04, 0x69,
+	0x6f, 0x70, 0x73, 0x18, 0x04, 0x20, 0x01, 0x28, 0x0d, 0x52, 0x04, 0x69, 0x6f, 0x70, 0x73, 0x42,
+	0x2f, 0x5a, 0x2d, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x74, 0x69,
+	0x6e, 0x79, 0x63, 0x69, 0x2f, 0x63, 0x69, 0x2d, 0x61, 0x67, 0x65, 0x6e, 0x74, 0x73, 0x2f, 0x63,
+	0x69, 0x2d, 0x67, 0x65, 0x6e, 0x2f, 0x67, 0x72, 0x70, 0x63, 0x2f, 0x74, 0x79, 0x70, 0x65, 0x73,
+	0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -154,18 +246,20 @@ func file_github_com_tinyci_ci_agents_ci_gen_grpc_types_run_settings_proto_rawDe
 	return file_github_com_tinyci_ci_agents_ci_gen_grpc_types_run_settings_proto_rawDescData
 }
 
-var file_github_com_tinyci_ci_agents_ci_gen_grpc_types_run_settings_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
+var file_github_com_tinyci_ci_agents_ci_gen_grpc_types_run_settings_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
 var file_github_com_tinyci_ci_agents_ci_gen_grpc_types_run_settings_proto_goTypes = []interface{}{
 	(*RunSettings)(nil),    // 0: types.RunSettings
-	(*_struct.Struct)(nil), // 1: google.protobuf.Struct
+	(*Resources)(nil),      // 1: types.Resources
+	(*_struct.Struct)(nil), // 2: google.protobuf.Struct
 }
 var file_github_com_tinyci_ci_agents_ci_gen_grpc_types_run_settings_proto_depIdxs = []int32{
-	1, // 0: types.RunSettings.metadata:type_name -> google.protobuf.Struct
-	1, // [1:1] is the sub-list for method output_type
-	1, // [1:1] is the sub-list for method input_type
-	1, // [1:1] is the sub-list for extension type_name
-	1, // [1:1] is the sub-list for extension extendee
-	0, // [0:1] is the sub-list for field type_name
+	2, // 0: types.RunSettings.metadata:type_name -> google.protobuf.Struct
+	1, // 1: types.RunSettings.resources:type_name -> types.Resources
+	2, // [2:2] is the sub-list for method output_type
+	2, // [2:2] is the sub-list for method input_type
+	2, // [2:2] is the sub-list for extension type_name
+	2, // [2:2] is the sub-list for extension extendee
+	0, // [0:2] is the sub-list for field type_name
 }
 
 func init() { file_github_com_tinyci_ci_agents_ci_gen_grpc_types_run_settings_proto_init() }
@@ -186,6 +280,18 @@ func file_github_com_tinyci_ci_agents_ci_gen_grpc_types_run_settings_proto_init(
 				return nil
 			}
 		}
+		file_github_com_tinyci_ci_agents_ci_gen_grpc_types_run_settings_proto_msgTypes[1].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*Resources); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
 	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
@@ -193,7 +299,7 @@ func file_github_com_tinyci_ci_agents_ci_gen_grpc_types_run_settings_proto_init(
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_github_com_tinyci_ci_agents_ci_gen_grpc_types_run_settings_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   1,
+			NumMessages:   2,
 			NumExtensions: 0,
 			NumServices:   0,
 		},
